--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/bottom-tabs": "^7.0.4",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.0.3",
+    "@teovilla/react-native-web-maps": "^0.9.5",
     "atob": "^2.1.2",
     "axios": "^1.7.7",
     "core-js": "^3.39.0",
@@ -42,6 +43,7 @@
     "expo-system-ui": "~4.0.3",
     "expo-web-browser": "~14.0.1",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "lottie-react-native": "7.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -52,8 +54,10 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-chat": "^0.9.0-beta.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.18.0",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-modals": "^0.22.3",
     "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.1",
